<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/homebg"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:id="@+id/homeheading"
            android:layout_marginTop="5dp"

            >


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:text="@string/TitleText"
                android:textColor="@color/selected"
                android:textSize="40sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="10dp"
                android:scaleType="fitCenter"
                android:layout_marginBottom="1dp"
                android:src="@drawable/lotslogo"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/homeheading"
            android:layout_marginTop="10dp"
            android:id="@+id/subtitle"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Subtitle"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle"
            android:id="@+id/homedice"
            android:gravity="center"
            >


            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/diceimg"
                android:layout_marginTop="0dp"
                android:scaleType="fitXY"
                android:src="@drawable/homedice" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="95dp"
            android:layout_below="@+id/homedice"
            android:gravity="center"
            >


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="230dp"
                android:layout_height="70dp"
                android:id="@+id/GetRhema"
                android:text="@string/Rhemabtn"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textColor="@color/black"
                android:background="@drawable/rhema_btn"
                android:gravity="center"
                android:elevation="20dp"

                />


        </LinearLayout>


    </RelativeLayout>

</FrameLayout>